examples/test/testpolicy19569.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19569
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key44: value36
      key31: value34
      key4: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value41
          key9: value33
          key22: value9
      podSelector:
        matchLabels:
          key19: value2
          key46: value15
